# nn-with-haskell

./: README.md  deep-learning-from-scratch.cabal  stack.yaml
app/: Main02.hs  Main03.hs  Main_ex.hs
src/: NeuralA.hs  Perceptron.hs
