name:                deep-learning-from-scratch
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/deep-learning-from-scratch#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Perceptron
                     , NeuralA
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
  default-language:    Haskell2010

executable main02
  hs-source-dirs:      app
  main-is:             Main02.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deep-learning-from-scratch
  default-language:    Haskell2010

executable main03
  hs-source-dirs:      app
  main-is:             Main03.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deep-learning-from-scratch
  default-language:    Haskell2010

test-suite deep-learning-from-scratch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , deep-learning-from-scratch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/deep-learning-from-scratch
